--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babylonjs/core": "^6.30.0",
+    "@babylonjs/havok": "^1.3.0",
     "vue": "^3.3.8"
   },
   "devDependencies": {
