--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.3.8"
   },
   "devDependencies": {
+    "@babylonjs/inspector": "^6.37.1",
     "@vitejs/plugin-vue": "^4.5.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
