--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
-    "strictPropertyInitialization": false,
+    // "strictPropertyInitialization": false,
     "noResolve": false, // disable TypeScript from automatically detecting/adding files based on import statements and etc (it's less helpful than you think)
     "removeComments": true, // remove comments from our outputted code to save on space (look into terser if you want to protect the outputted JS even more)
     "noImplicitReturns": true, // raises an error for functions that return nothing  
