--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,vue}\""
   },
   "dependencies": {
     "@babylonjs/core": "^6.30.0",
     "@babylonjs/havok": "^1.3.0",
     "babylonjs": "^6.37.1",
     "babylonjs-serializers": "^6.37.1",
+    "prettier": "^3.1.1",
     "vue": "^3.3.8"
   },
   "devDependencies": {
