--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,vue}\""
   },
   "dependencies": {
-    "@babylonjs/core": "^6.30.0",
+    "@babylonjs/core": "^6.40.0",
     "@babylonjs/havok": "^1.3.0",
+    "@babylonjs/loaders": "^6.40.0",
     "prettier": "^3.1.1",
     "vue": "^3.3.8"
   },
   "devDependencies": {
-    "@babylonjs/inspector": "^6.37.1",
     "@vitejs/plugin-vue": "^4.5.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
