--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babylonjs/core": "^6.40.0",
     "@babylonjs/havok": "^1.3.0",
     "@babylonjs/loaders": "^6.40.0",
+    "@babylonjs/materials": "^6.40.0",
     "prettier": "^3.1.1",
     "vue": "^3.3.8"
   },
