--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babylonjs/core": "^6.40.0",
+    "@babylonjs/gui": "^6.41.0",
     "@babylonjs/havok": "^1.3.0",
     "@babylonjs/loaders": "^6.40.0",
     "@babylonjs/materials": "^6.40.0",
@@ -18,6 +19,7 @@
     "vue": "^3.3.8"
   },
   "devDependencies": {
+    "@babylonjs/inspector": "^6.41.0",
     "@vitejs/plugin-vue": "^4.5.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
