--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ky": "^1.2.0",
     "prettier": "^3.1.1",
     "socket.io-client": "^4.7.4",
-    "vue": "^3.3.8"
+    "vue": "^3.3.8",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@babylonjs/inspector": "^6.41.0",
