--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "prettier": "^3.1.1",
     "socket.io-client": "^4.7.4",
     "vue": "^3.3.8",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-sonner": "^1.1.2"
   },
   "devDependencies": {
     "@babylonjs/inspector": "^6.41.0",
