--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,8 @@
     "noImplicitReturns": true, // raises an error for functions that return nothing  
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "files.exclude": {
+    "**/node_modules": true
+  }
 }
