fin animate fleche and modify settings

--- a/src/assets/tirArcGameSettings.json
+++ b/src/assets/tirArcGameSettings.json
@@ -14,8 +14,8 @@
             "placement" : 
             [ 
                 {  
-                    "start" : "CylinderTirMoyenAtt",
-                    "end" : "CylinderTirMoyen"   
+                    "start" : "CylinderTirFacileAtt",
+                    "end" : "CylinderTirFacile"   
                 }
             ],
             "pointToSucceed" : 100
