--- a/src/assets/javelotGameSettings.json
+++ b/src/assets/javelotGameSettings.json
@@ -8,7 +8,7 @@
                     "end" : "CylinderTirFacile"   
                 }
             ],
-            "pointToSucceed" : 50
+            "pointToSucceed" : 25
         },
         "intermediate" : {
             "placement" : 
@@ -18,7 +18,17 @@
                     "end" : "CylinderTirFacile"   
                 }
             ],
-            "pointToSucceed" : 100
+            "pointToSucceed" : 25
+        },
+        "hard" : {
+            "placement" : 
+            [ 
+                {  
+                    "start" : "CylinderTirFacileAtt",
+                    "end" : "CylinderTirFacile"   
+                }
+            ],
+            "pointToSucceed" : 25
         }
     }
 }
